--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,8 @@ log = "0.4"
 tauri = { version = "2.5.0", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-shell = "2.0.0-rc"
+
+# 新規追加の依存関係
+dirs = "5.0"           # 設定ディレクトリパス取得用
+uuid = { version = "1.0", features = ["v4"] }  # UUID生成用
+chrono = { version = "0.4", features = ["serde"] }  # 日時処理用
