--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,15 @@ tauri-plugin-shell = "2.0.0-rc"
 dirs = "5.0"           # 設定ディレクトリパス取得用
 uuid = { version = "1.0", features = ["v4"] }  # UUID生成用
 chrono = { version = "0.4", features = ["serde"] }  # 日時処理用
+
+# AWS SDK for Rust
+aws-config = "1.1"
+aws-sdk-s3 = "1.15"
+aws-sdk-sts = "1.15"    # AWS STS (Security Token Service)
+aws-credential-types = "1.1"  # AWS認証情報タイプ
+tokio = { version = "1.0", features = ["full"] }
+
+# 暗号化・セキュリティ
+ring = "0.17"           # 暗号化ライブラリ
+base64 = "0.22"         # Base64エンコーディング
+keyring = "2.3"         # OS キーチェーン統合（macOS Keychain等）
