--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -46,6 +46,7 @@ keyring = "2.3"         # OS キーチェーン統合（macOS Keychain等）
 notify = "6.0"          # ファイルシステム監視
 crossbeam-channel = "0.5"  # 非同期チャンネル通信
 regex = "1.10"          # 正規表現パターンマッチング
+lazy_static = "1.4"     # グローバル静的変数管理
 
 # メタデータ管理・データベース
 rusqlite = { version = "0.30", features = ["bundled"] }  # SQLiteデータベース
