--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,10 @@ ring = "0.17"           # 暗号化ライブラリ
 base64 = "0.22"         # Base64エンコーディング
 keyring = "2.3"         # OS キーチェーン統合（macOS Keychain等）
 
+[target.'cfg(target_os = "macos")'.dependencies]
+security-framework = "2.11"  # macOS Security Framework for Touch ID/Face ID
+core-foundation = "0.9"      # Core Foundation bindings for macOS
+
 # ファイル監視・非同期処理
 notify = "6.0"          # ファイルシステム監視
 crossbeam-channel = "0.5"  # 非同期チャンネル通信
