--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4"
 tauri = { version = "2.5.0", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-shell = "2.0.0-rc"
+tauri-plugin-dialog = "2.0.0-rc"
 
 # 新規追加の依存関係
 dirs = "5.0"           # 設定ディレクトリパス取得用
@@ -32,7 +33,7 @@ chrono = { version = "0.4", features = ["serde"] }  # 日時処理用
 
 # AWS SDK for Rust
 aws-config = "1.1"
-aws-sdk-s3 = "1.15"
+aws-sdk-s3 = { version = "1.15", features = ["behavior-version-latest"] }
 aws-sdk-sts = "1.15"    # AWS STS (Security Token Service)
 aws-credential-types = "1.1"  # AWS認証情報タイプ
 tokio = { version = "1.0", features = ["full"] }
