feat: アップロードマネージャーUIの実装と全体進捗表示の修正
## 主な変更内容

### 🎯 新機能
- **UploadManager コンポーネント**: 完全なアップロード管理UI実装
- **リアルタイム進捗表示**: バックエンドからの進捗イベントをリアルタイム反映
- **設定パネル**: 無料版/プレミアム版の設定切り替え機能
- **ファイル選択**: Tauriネイティブファイルダイアログ統合

### 🐛 バグ修正
- **全体進捗計算**: 数値表示とプログレスバーの同期問題を解決
- **日本語表記**: 「即座」→「即時」の正しい表記に修正
- **レンダリング最適化**: React状態更新とDOM直接操作の競合を解消

### 🎨 UI改善
- **コンパクト表示**: ファイル統計情報を1行にまとめて表示
- **ダークテーマ対応**: 統一されたデザインシステム適用
- **レスポンシブ対応**: モバイル表示の最適化

### 🔧 技術的改善
- **flushSync活用**: React 18の自動バッチングを制御してリアルタイム更新
- **型安全性**: TypeScript型定義の強化
- **エラーハンドリング**: 包括的なエラー処理とユーザーフィードバック

### 📊 パフォーマンス
- **並列アップロード**: プレミアム版で最大8ファイル同時処理
- **チャンク最適化**: 動的チャンクサイズ調整機能
- **メモリ効率**: 大容量ファイル対応の最適化

## 影響範囲
- `src/components/UploadManager.tsx` (新規)
- `src/components/UploadManager.css` (新規)
- `src/App.tsx` (統合)
- `src/types/tauri-commands.ts` (型定義拡張)
- バックエンド連携の強化

## テスト状況
- ✅ 複数ファイル同時アップロード
- ✅ リアルタイム進捗表示
- ✅ 全体進捗計算の正確性
- ✅ UI表示の最適化
- ✅ エラーハンドリング

Co-authored-by: Aura <aura@reelvault.dev>

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,7 @@ tokio = { version = "1.0", features = ["full"] }
 ring = "0.17"           # 暗号化ライブラリ
 base64 = "0.22"         # Base64エンコーディング
 keyring = "2.3"         # OS キーチェーン統合（macOS Keychain等）
+futures = "0.3.31"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 security-framework = "2.11"  # macOS Security Framework for Touch ID/Face ID
