feat: Complete error handling standardization and close Issue #13 - Implement InternalError type with thiserror for type-safe error handling - Add standardize_error function for Tauri command boundary - Unify all Tauri commands to return Result<T, String> - Update technical design documentation to reflect current implementation - Complete all error handling and logging requirements for Issue #13

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -51,6 +51,8 @@ ring = "0.17"           # 暗号化ライブラリ
 base64 = "0.22"         # Base64エンコーディング
 keyring = "2.3"         # OS キーチェーン統合（macOS Keychain等）
 futures = "0.3.31"
+rfd = "0.15.3"
+sysinfo = "0.35.2"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 security-framework = "2.11"  # macOS Security Framework for Touch ID/Face ID
